--- a/index.html
+++ b/index.html
@@ -1,3 +1,10 @@
-<!DOCTYPE HTML>
-<head></head>
-<body
+<!DOCTYPE html>
+<html>
+  <head></head>
+    <body>
+      <p>--------------------------------------------------------</p>
+      <script language="javascript" src="script.js"></script>
+      <p>--------------------------------------------------------</p>
+    </body>
+      <footer></footer>
+</html>
