--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head></head>
     <body>
-      <p>--------------------------------------------------------</p>
+      <p id="demo">--------------------------------------------------------</p>
       <script language="javascript" src="script.js"></script>
       <p>--------------------------------------------------------</p>
     </body>
