--- a/index.html
+++ b/index.html
@@ -1,10 +1,27 @@
 <!DOCTYPE html>
 <html>
-  <head></head>
+  <head>
+    <title>x days</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+  </head>
     <body>
-      <p id="demo">--------------------------------------------------------</p>
-      <script language="javascript" src="script.js"></script>
-      <p>--------------------------------------------------------</p>
+       <!-- <div class="container"></div> */ -->
+      <div class="grid-container">
+        <div class="grid-item"></div>
+        <div class="grid-item"></div>
+        <div class="grid-item"></div>
+        <div class="grid-item"></div>
+        <div class="grid-item">
+          <p id="demo">
+            <script language="javascript" src="script.js"></script>
+            days
+          </p>
+        </div>
+        <div class="grid-item"></div>
+        <div class="grid-item"></div>
+        <div class="grid-item"></div>
+        <div class="grid-item"></div>
+      </div>
     </body>
       <footer></footer>
 </html>
