--- a/index.html
+++ b/index.html
@@ -1,20 +1,19 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" dir="ltr">
   <head>
-    <title>x days</title>
+    <title>x tage.</title>
+    <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
-    <body>
-       <!-- <div class="container"></div> */ -->
-      <div class="grid-container">
+  <body>
+    <div class="grid-container">
         <div class="grid-item"></div>
         <div class="grid-item"></div>
         <div class="grid-item"></div>
         <div class="grid-item"></div>
         <div class="grid-item">
-          <p id="demo">
+          <p id="days">
             <script language="javascript" src="script.js"></script>
-            days
           </p>
         </div>
         <div class="grid-item"></div>
@@ -22,6 +21,6 @@
         <div class="grid-item"></div>
         <div class="grid-item"></div>
       </div>
-    </body>
-      <footer></footer>
+  </body>
+  <footer>© 2018 oidawas All Rights Reserved.</footer>
 </html>
